--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,8 @@ android {
         jvmTarget = '1.8'
     }
 }
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
