--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BigBrain">
-        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".TriviaQuestion"></activity>
+        <activity android:name=".LogosQuestionActivity" />
+        <activity android:name=".ResultActivity" />
         <activity android:name=".FlagsQuestionActivity" />
         <activity android:name=".CategoryAvtivity" />
         <activity android:name=".MainActivity">
